# WhereTF-did-my-monies-go

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml  pytest.ini
money_manager/: config.py
money_manager/app/: __init__.py  agent.py  tools.py
money_manager/domain/: interfaces.py  models.py
money_manager/tools/: db.py  llm.py
money_manager/tools/ingestion/: __init__.py  llm_raw_extractor.py  llm_schema_mapper.py  pdf_extractor.py  pipeline.py  validator.py
money_manager/ui/: __init__.py  api.py  streamlit_app.py
tests/: test_agent.py  test_api.py  test_duckdb.py  test_ingestion.py  test_repository.py  test_tools.py
